--- a/.github/workflows/infrastructure.yml
+++ b/.github/workflows/infrastructure.yml
@@ -31,12 +31,12 @@ jobs:
           role-session-name: git-${{ github.sha }}
           aws-region: ap-south-1
 
-      - uses: hashicorp/setup-terraform@v2
+      - name: Setting up terraform
+        uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: 1.3.7
 
       - name: Restore cache
-        id: restore
         uses: actions/cache@v3
         with:
           path: |
@@ -46,7 +46,13 @@ jobs:
           restore-keys: |
             terraform-
 
-      - name: Some test command
+      - name: Init
+        working-directory: resources
         run: |
-          terraform -version
-          aws s3 ls --recursive s3://terraform-backend-joe-sandbox
+          terraform -version >> $GITHUB_STEP_SUMMARY
+          terraform init
+
+      - name: Plan
+        working-directory: resources
+        run: |
+          terraform plan
