Try: connect to tw sandbox account, lets see

--- a/.github/workflows/infrastructure.yml
+++ b/.github/workflows/infrastructure.yml
@@ -7,6 +7,8 @@ on:
       - "main"
     paths-ignore:
       - "setup/**"
+      - "workflows/**"
+      - "!workflows/**/infrastructure.yml"
 
 concurrency: infrastructure_${{ github.ref }}
 
