--- a/.github/workflows/infrastructure.yml
+++ b/.github/workflows/infrastructure.yml
@@ -30,7 +30,7 @@ jobs:
           fetch-depth: 1
 
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1-node16
+        uses: aws-actions/configure-aws-credentials@v2
         with:
           role-to-assume: ${{ secrets.AWS_ASSUME_ROLE_ARN }}
           role-session-name: git-${{ github.sha }}
@@ -39,7 +39,7 @@ jobs:
       - name: Setting up terraform
         uses: hashicorp/setup-terraform@v2
         with:
-          terraform_version: 1.3.7
+          terraform_version: 1.3.8
 
       - name: Restore cache
         uses: actions/cache@v3
