--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ override.tf.json
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
 # example: *tfplan*
 
+.idea
 *.key
 *.crt
 *.pem
