--- a/.github/workflows/tailscale.yml
+++ b/.github/workflows/tailscale.yml
@@ -22,8 +22,8 @@ jobs:
       id-token: write
       contents: read
     env:
-      TAILSCALE_OAUTH_CLIENT_ID: ${{ secrets.TS_OAUTH_CLIENT_ID }}
-      TAILSCALE_OAUTH_CLIENT_SECRET: ${{ secrets.TS_OAUTH_SECRET }}
+      TAILSCALE_OAUTH_CLIENT_ID: ${{ secrets.TAILSCALE_OAUTH_CLIENT_ID }}
+      TAILSCALE_OAUTH_CLIENT_SECRET: ${{ secrets.TAILSCALE_OAUTH_CLIENT_SECRET }}
 
     steps:
       - name: Checkout
@@ -47,11 +47,11 @@ jobs:
         uses: actions/cache@v3
         with:
           path: |
-            **/.terraform
-            **/.terraform.lock.hcl
-          key: terraform-${{ github.sha }}
+            tailscale/.terraform
+            tailscale/.terraform.lock.hcl
+          key: terraform-tailscale-${{ github.sha }}
           restore-keys: |
-            terraform-
+            terraform-tailscale-
 
       - name: Init
         working-directory: tailscale
@@ -59,13 +59,13 @@ jobs:
           terraform init
 
       - name: Apply
-        if: ${{ inputs.tf-destroy }} == false
+        if: inputs.tf-destroy == false
         working-directory: tailscale
         run: |
           terraform apply -auto-approve
 
       - name: Destroy
-        if: ${{ inputs.tf-destroy }} == true
+        if: inputs.tf-destroy
         working-directory: tailscale
         run: |
           terraform destroy -auto-approve
