--- a/tailscale/k8s/manifest.yaml
+++ b/tailscale/k8s/manifest.yaml
@@ -130,10 +130,10 @@ spec:
       containers:
         - name: operator
           image: tailscale/k8s-operator:unstable
-          resources:
-            requests:
-              cpu: 500m
-              memory: 100Mi
+          # resources:
+          #   requests:
+          #     cpu: 500m
+          #     memory: 100Mi
           env:
             - name: OPERATOR_HOSTNAME
               value: tailscale-operator
